# financial-data-platform

./: .env.example  .gitignore  PROGRESS.md  PROJECT.html  README.md  pyproject.toml
alembic/: env.py
alembic/versions/: 0001_initial_schema.py
config/: default.yaml
src/fdp/: cli.py  config.py
src/fdp/access/: __init__.py
src/fdp/repair/: __init__.py
src/fdp/sources/: __init__.py
src/fdp/sources/eodhd/: __init__.py  client.py  ingestion.py  instruments.py
src/fdp/storage/: __init__.py  tables.py  upsert.py
tests/: test.txt  test_cli.py  test_eodhd_client.py  test_eodhd_ingestion.py  test_eodhd_instruments.py  test_scaffold.py  test_storage_schema.py  test_storage_upsert.py
